# redspot

./: .123trigger  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  README.md  babel.config.js  jest.config.js  lerna.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  pr-any.yml  push-master.yml
.yarn/plugins/@yarnpkg/: plugin-interactive-tools.cjs  plugin-version.cjs
.yarn/versions/: 9736bb61.yml
docs/: README.md
docs/.vuepress/: config.js
examples/delegator/: .gitignore  package.json  redspot.config.ts
examples/delegator/contracts/: Cargo.toml  lib.rs
examples/delegator/scripts/: deploy.ts
examples/delegator/tests/: delegator.test.ts
examples/erc20/: .gitignore  package.json  redspot.config.ts  tsconfig.json
examples/flipper/: .gitignore  Cargo.toml  buidler.config.ts  jest.config.js  lib.rs  package.json  redspot.config.ts
examples/flipper/artifacts/: flipper.json
examples/flipper/cache/: console-history.txt
examples/flipper/scripts/: deploy.ts
examples/flipper/test/: sample.test.ts
examples/flipper/tests/: flipper.test.ts
examples/multi-contract/: README.md  package.json  redspot.config.ts
examples/plasm/: README.md  index.js  package.json  redspot.config.ts  tsconfig.json
examples/solang/: .gitignore  package.json  redspot.config.ts
scripts/: build.js  release.js  runExample.js
test/: .mocharc.js  package.json  tsconfig.json
test/builtin-tasks/: clean.ts  flatten.ts  run.ts
test/helpers/: environment.ts  errors.ts
test/internal/: artifacts.ts  context.ts
(+89 files in other folders)
