[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "flipper"
version = "2.1.0"

[dependencies]
ink_core = {git = "https://github.com/paritytech/ink", branch = "master", default-features = false}
ink_lang = {git = "https://github.com/paritytech/ink", branch = "master", default-features = false}
ink_metadata = {git = "https://github.com/paritytech/ink", branch = "master", default-features = false, features = ["derive"], optional = true}
ink_primitives = {git = "https://github.com/paritytech/ink", branch = "master", default-features = false}

scale = {package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"]}
scale-info = {version = "0.3", default-features = false, features = ["derive"], optional = true}

[lib]
crate-type = ["cdylib"]
name = "flipper"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_core/std",
  "ink_lang/std",
  "scale/std",
  "scale-info",
  "scale-info/std",
]
